--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div class="logo">QA</div>
     <h1>QuickAdz</h1>
     <p class="tagline">Ad Banao, Business Badhao</p>
-
     <div class="form">
       <input type="text" id="businessName" placeholder="Enter your Business Name or Website" />
+      <input type="text" id="tagline" placeholder="Enter your Tagline" />
+      <input type="text" id="cta" placeholder="Enter Call to Action" />
       <select id="platform">
         <option value="Facebook">Facebook</option>
         <option value="Instagram">Instagram</option>
@@ -25,17 +26,17 @@
       </select>
       <button onclick="generateAd()">Generate Ad</button>
     </div>
-
     <div class="output" id="output" style="display:none;">
       <h3>Generated Ad</h3>
-      <p><strong>Headline:</strong> <span id="headline"></span></p>
-      <p><strong>Description:</strong> <span id="description"></span></p>
-      <p><strong>Call to Action:</strong> <span id="cta"></span></p>
-      <button onclick="copyAd()">Copy to Clipboard</button>
+      <div id="adPreview" class="adPreview">
+        <h4 id="adHeadline"></h4>
+        <p id="adDescription"></p>
+        <button id="downloadBtn" onclick="downloadAd()">Download Ad</button>
+      </div>
     </div>
   </div>
-
   <footer>Made with love in India | © 2025 QuickAdz</footer>
+  <script src="html2canvas.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
