--- a/index.html
+++ b/index.html
@@ -1,42 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>QuickAdz – Ad Banao, Business Badhao</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <title>QuickAdz V3 – Image Ad Generator</title>
+  <style>
+    body {
+      background: linear-gradient(to right, #fceabb, #f8b500);
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+    }
+    h1 {
+      font-size: 3em;
+      color: #333;
+      margin-bottom: 0;
+    }
+    p.tagline {
+      font-size: 1.2em;
+      color: #555;
+      margin-top: 0;
+    }
+    input, button {
+      padding: 10px;
+      font-size: 1em;
+      margin: 10px;
+    }
+    canvas {
+      border: 2px solid #333;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <div class="logo">QA</div>
-    <h1>QuickAdz</h1>
-    <p class="tagline">Ad Banao, Business Badhao</p>
-    <div class="form">
-      <input type="text" id="businessName" placeholder="Enter your Business Name or Website" />
-      <input type="text" id="tagline" placeholder="Enter your Tagline" />
-      <input type="text" id="cta" placeholder="Enter Call to Action" />
-      <select id="platform">
-        <option value="Facebook">Facebook</option>
-        <option value="Instagram">Instagram</option>
-        <option value="Google Ads">Google Ads</option>
-        <option value="YouTube">YouTube</option>
-        <option value="LinkedIn">LinkedIn</option>
-        <option value="Twitter">Twitter (X)</option>
-        <option value="Others">Others</option>
-      </select>
-      <button onclick="generateAd()">Generate Ad</button>
-    </div>
-    <div class="output" id="output" style="display:none;">
-      <h3>Generated Ad</h3>
-      <div id="adPreview" class="adPreview">
-        <h4 id="adHeadline"></h4>
-        <p id="adDescription"></p>
-        <button id="downloadBtn" onclick="downloadAd()">Download Ad</button>
-      </div>
-    </div>
-  </div>
-  <footer>Made with love in India | © 2025 QuickAdz</footer>
-  <script src="html2canvas.min.js"></script>
-  <script src="script.js"></script>
+  <h1>QuickAdz</h1>
+  <p class="tagline">Ad Banao, Business Badhao</p>
+
+  <input type="text" id="headline" placeholder="Ad Headline"><br>
+  <input type="text" id="desc" placeholder="Ad Description"><br>
+  <input type="text" id="cta" placeholder="Ad ke Button Par Kya Likhen?"><br>
+  <button onclick="generateAd()">Preview Ad</button>
+  <button onclick="downloadAd()">Download Ad Image</button>
+
+  <canvas id="adCanvas" width="1200" height="630"></canvas>
+
+  <script>
+    function generateAd() {
+      const headline = document.getElementById('headline').value;
+      const desc = document.getElementById('desc').value;
+      const cta = document.getElementById('cta').value;
+
+      const canvas = document.getElementById('adCanvas');
+      const ctx = canvas.getContext('2d');
+
+      ctx.fillStyle = '#ffffff';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      ctx.fillStyle = '#000';
+      ctx.font = 'bold 50px Arial';
+      ctx.fillText(headline, 60, 100);
+
+      ctx.fillStyle = '#555';
+      ctx.font = '40px Arial';
+      ctx.fillText(desc, 60, 200);
+
+      ctx.fillStyle = '#FF5722';
+      ctx.fillRect(60, 300, 300, 80);
+
+      ctx.fillStyle = '#fff';
+      ctx.font = '40px Arial';
+      ctx.fillText(cta, 80, 355);
+    }
+
+    function downloadAd() {
+      const canvas = document.getElementById('adCanvas');
+      const link = document.createElement('a');
+      link.download = 'quickadz_ad.png';
+      link.href = canvas.toDataURL();
+      link.click();
+    }
+  </script>
 </body>
 </html>
